--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "description": "This is an admin service to manage problems",
   "main": "index.js",
   "scripts": {
+    "dev": "npx nodemon src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^5.2.1"
+    "dotenv": "^17.2.4",
+    "express": "^5.2.1",
+    "nodemon": "^3.1.11"
   }
 }
